<!--
  ~ Copyright © 2020 Ansh Gandhi
  ~
  ~ This file is part of Piano Scales Randomizer.
  ~
  ~ Piano Scales Randomizer is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Piano Scales Randomizer is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Piano Scales Randomizer.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Original Author: Ansh Gandhi
  ~ Original Source Code: <https://github.com/anshgandhi4/ABRSM-Scales-App/>
  ~ Original App: <https://play.google.com/store/apps/details?id=com.anshgandhi.pianoscalesrandomizer>
  ~
  ~ EVERYTHING ABOVE THIS LINE MUST BE KEPT AS IS UNDER GNU GPL LICENSE RULES.
  -->
<resources>
    <string name="app_name">Piano Scales Randomizer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_g1">Grade 1</string>
    <string name="menu_g2">Grade 2</string>
    <string name="menu_g3">Grade 3</string>
    <string name="menu_g4">Grade 4</string>
    <string name="menu_g5">Grade 5</string>
    <string name="menu_g6">Grade 6</string>
    <string name="menu_g7">Grade 7</string>
    <string name="menu_g8">Grade 8</string>

    <string name="activity_settings">SettingsActivity</string>
    <string name="activity_g1">Grade1Activity</string>
    <string name="activity_g2">Grade2Activity</string>
    <string name="activity_g3">Grade3Activity</string>
    <string name="activity_g4">Grade4Activity</string>
    <string name="activity_g5">Grade5Activity</string>
    <string name="activity_g6">Grade6Activity</string>
    <string name="activity_g7">Grade7Activity</string>
    <string name="activity_g8">Grade8Activity</string>

    <string name="welcome_string">Welcome to Piano Scales Randomizer!</string>
    <string name="instructions_string">Use the Navigation Bar on the Left to Start Practicing!</string>
    <string name="app_logo">App Logo</string>
    <string name="settings_shortcut">Shortcut to Settings</string>
    <string name="settings">Settings</string>
    <string name="g12">Grades 1/2 Minor Scale</string>
    <string name="g345">Grades 3/4/5 Minor Scale</string>
    <string name="g567">Grades 5/6/7 Group</string>
    <string name="group1">Group 1</string>
    <string name="group2">Group 2</string>
    <string name="title_activity_settings">Settings</string>

    <string name="legato_scales_in_thirds">Legato Scales In Thirds</string>
    <string name="staccato_scales_in_thirds">Staccato Scales In Thirds</string>
    <string name="staccato_scales_in_sixths">Staccato Scales In Sixths</string>
    <string name="scales_a_third_apart">Scales A Third Apart</string>
    <string name="staccato_scales">Staccato Scales</string>
    <string name="chromatic_scales_a_minor_third_apart">Chromatic Scales A Minor Third Apart</string>
    <string name="scales_a_sixth_apart">Scales A Sixth Apart</string>
    <string name="chromatic_scale_in_minor_thirds">Chromatic Scale In Minor Thirds</string>
    <string name="chromatic_scales">Chromatic Scales</string>
    <string name="chromatic_contrary_motion_scales">Chromatic Contrary-Motion Scales</string>
    <string name="contrary_motion_scales">Contrary-Motion Scales</string>
    <string name="whole_tone_scale">Whole-Tone Scale</string>
    <string name="arpeggios">Arpeggios</string>
    <string name="dominant_sevenths">Dominant Sevenths</string>
    <string name="diminished_sevenths">Diminished Sevenths</string>
    <string name="regular_scales">Regular Scales</string>
    <string name="broken_chords">Broken Chords</string>

    <string name="major">Major</string>
    <string name="natural">Natural</string>
    <string name="harmonic">Harmonic</string>
    <string name="melodic">Melodic</string>
    <string name="minor">Minor</string>

    <string name="both_hands">Both Hands</string>
    <string name="left_hand">Left Hand</string>
    <string name="right_hand">Right Hand</string>

    <string name="legato">Legato</string>
    <string name="staccato">Staccato</string>

    <string name="root_position">Root</string>
    <string name="first_inversion">First</string>
    <string name="second_inversion">Second</string>

    <string name="_88">88 𝅗𝅥</string>
    <string name="_80">80 𝅗𝅥</string>
    <string name="_76">76 𝅗𝅥</string>
    <string name="_66">66 𝅗𝅥</string>
    <string name="_63">63 𝅗𝅥</string>
    <string name="_60">60 𝅗𝅥</string>
    <string name="_56">56 𝅗𝅥</string>
    <string name="_52">52 𝅗𝅥</string>
    <string name="_50">50 𝅗𝅥</string>
    <string name="_46">46 𝅗𝅥</string>
    <string name="_88_q">88 ♩</string>
    <string name="_80_q">80 ♩</string>
    <string name="_76_q">76 ♩</string>
    <string name="_69_q">69 ♩</string>
    <string name="_66_q">66 ♩</string>
    <string name="_63_q">63 ♩</string>
    <string name="_60_q">60 ♩</string>
    <string name="_46_dq">46 ♩.</string>

    <string name="_4_octaves">4 Octaves</string>
    <string name="_3_octaves">3 Octaves</string>
    <string name="_2_octaves">2 Octaves</string>
    <string name="_1_octave">1 Octave</string>

    <string name="a">A</string>
    <string name="a_flat">A♭</string>
    <string name="a_flat_g_sharp">A♭/G♯</string>
    <string name="b">B</string>
    <string name="b_flat">B♭</string>
    <string name="b_flat_a_sharp">B♭/A♯</string>
    <string name="c">C</string>
    <string name="c_sharp">C♯</string>
    <string name="d">D</string>
    <string name="d_flat">D♭</string>
    <string name="d_flat_c_sharp">D♭/C♯</string>
    <string name="e">E</string>
    <string name="e_flat">E♭</string>
    <string name="e_flat_d_sharp">E♭/D♯</string>
    <string name="f">F</string>
    <string name="f_sharp">F♯</string>
    <string name="g">G</string>
    <string name="g_sharp">G♯</string>
    <string name="g_flat_f_sharp">G♭/F♯</string>
    <string name="a_sharp_c_sharp">A♯/C♯</string>
    <string name="a_flat_d">A♭/D</string>
    <string name="blank"> </string>

    <string name="go_to_grade_8">Go To Grade 8</string>
    <string name="go_to_grade_7">Go To Grade 7</string>
    <string name="go_to_grade_6">Go To Grade 6</string>
    <string name="go_to_grade_5">Go To Grade 5</string>
    <string name="go_to_grade_4">Go To Grade 4</string>
    <string name="go_to_grade_3">Go To Grade 3</string>
    <string name="go_to_grade_2">Go To Grade 2</string>
    <string name="go_to_grade_1">Go To Grade 1</string>
    <string name="go_home">Go Home</string>
    <string name="randomize_scales">Randomize Scales</string>
</resources>
